--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
+  "name": "clubgest-backend",
+  "version": "0.1.0",
+  "description": "API REST para la gestión de clubes deportivos amateurs: jugadores, entrenadores, entrenamientos, asistencia, seguros, lesiones y categorías.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "club",
+    "deporte",
+    "backend",
+    "api-rest",
+    "gestión"
+  ],
+  "author": "Cristian G.Gz",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
