--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "cors": "2.^8.5",
+    "express": "5.^2.^1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "3.^1.^11"
   }
 }
