--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "clubgest-backend",
   "version": "0.1.0",
   "description": "API REST para la gestión de clubes deportivos amateurs: jugadores, entrenadores, entrenamientos, asistencia, seguros, lesiones y categorías.",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "club",
@@ -19,10 +19,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "cors": "2.^8.5",
-    "express": "5.^2.^1"
+    "cors": "^2.8.5",
+    "express": "^5.2.1"
   },
   "devDependencies": {
-    "nodemon": "3.^1.^11"
+    "nodemon": "^3.1.11"
   }
 }
