--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
     "js-yaml": "^4.1.1",
     "sqlite3": "^5.1.7",
     "yargs": "^17.7.2"
