--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.3.1",
     "js-yaml": "^4.1.1",
     "sqlite3": "^5.1.7",
+    "yaml": "^2.8.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
